Fixed Alignment and Navbar color

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
+            <div class="col col-sm order-sm-first col-md">
             <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center"
                             src="img/uthappizza.png" alt="Uthappizza">
@@ -63,7 +64,9 @@
                             cherry tomatoes, Vidalia onion, Guntur chillies and
                             Buffalo Paneer.</p>
                     </div>
-                </div>
+            </div>
+            </div>
+            
         </div>
 
 
